Fixed z-index issue in gallery element
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@11899 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/elements/upfront-gallery/css/ugallery.css
+++ b/elements/upfront-gallery/css/ugallery.css
@@ -359,6 +359,7 @@ div.ugallery-label-selector {
 .ugallery-controls,
 .ui-resizable-autohide .ugallery_item:hover .ugallery-controls {
 	display: none;
+	z-index: 2;
 }
 
 .ugallery_selected {
